force-app/main/default/objects/Registration_Request__c/Registration_Request__c.object-meta.xml
<CustomObject>
    <description>A (Contact, Offering) pair representing a request for registration.</description>
    <label>Registration Request</label>
    <nameField>
        <displayFormat>RRN-{00000}</displayFormat>
        <label>Registration Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registration Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>