force-app/main/default/objects/Registration_Request__c/fields/Course_Offering__c.field-meta.xml
<CustomField>
    <fullName>Course_Offering__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Offering the student is requesting enrollment in.</description>
    <inlineHelpText>Offering the student is requesting enrollment in.</inlineHelpText>
    <label>Course Offering</label>
    <referenceTo>hed__Course_Offering__c</referenceTo>
    <relationshipLabel>Registration Requests</relationshipLabel>
    <relationshipName>Registration_Requests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>