force-app/main/default/objects/Registration_Request__c/fields/Fulfilled_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Fulfilled_Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The enrollment that fulfills this request.</description>
    <inlineHelpText>The enrollment that fulfills this request.</inlineHelpText>
    <label>Fulfilled Enrollment</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>hed__Course_Enrollment__c.hed__Course_Offering__c</field>
            <operation>equals</operation>
            <valueField>$Source.Course_Offering__c</valueField>
        </filterItems>
        <filterItems>
            <field>hed__Course_Enrollment__c.hed__Contact__c</field>
            <operation>equals</operation>
            <valueField>$Source.Student__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>hed__Course_Enrollment__c</referenceTo>
    <relationshipLabel>Registration Requests</relationshipLabel>
    <relationshipName>Registration_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>