force-app/main/default/objects/Registration_Request__c/fields/Is_Credit__c.field-meta.xml
<CustomField>
    <fullName>Is_Credit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if offering is credit. Set before save in trigger.</description>
    <inlineHelpText>True if offering is credit. Set before save in trigger.</inlineHelpText>
    <label>Is Credit</label>
    <type>Checkbox</type>
</CustomField>