force-app/main/default/objects/Registration_Request__c/fields/Line_Item_ID__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_ID__c</fullName>
    <description>External Line Item ID that is servicing this request.</description>
    <externalId>true</externalId>
    <inlineHelpText>External Line Item ID that is servicing this request.</inlineHelpText>
    <label>Line Item ID</label>
    <length>32</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>