force-app/main/default/objects/Registration_Request__c/fields/Registration_Batch__c.field-meta.xml
<CustomField>
    <fullName>Registration_Batch__c</fullName>
    <description>The parent of this batch. Could contain enrollment requests for other section or other students.</description>
    <inlineHelpText>The parent of this batch. Could contain enrollment requests for other section or other students.</inlineHelpText>
    <label>Registration Batch</label>
    <referenceTo>Registration_Batch__c</referenceTo>
    <relationshipLabel>Registration Requests</relationshipLabel>
    <relationshipName>Registration_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>