force-app/main/default/objects/Registration_Request__c/fields/Registration_Id__c.field-meta.xml
<CustomField>
    <fullName>Registration_Id__c</fullName>
    <description>Registration that was generated and includes this line item. The batch itself may contain multiple registrations.</description>
    <inlineHelpText>Registration that was generated and includes this line item. The batch itself may contain multiple registrations.</inlineHelpText>
    <label>Registration Id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>