force-app/main/default/objects/Registration_Request__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Student for the registration request.</description>
    <inlineHelpText>Student for the registration request.</inlineHelpText>
    <label>Student</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Registration Requests</relationshipLabel>
    <relationshipName>Registration_Requests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>